_sass/general.scss
/* ... */
.btn-xl .badge {
  color: $colorPrimary;
  background-color: #fff;
}

.navbar-default {
  border-color: transparent;
  background-color: #222;
}

.navbar-default .navbar-brand {
  font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
  color: $colorPrimary;
}

.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus,
.navbar-default .navbar-brand:active,
.navbar-default .navbar-brand.active {
  color: $colorSecondary;
}

.navbar-default .navbar-collapse {
  border-color: rgba(255, 255, 255, .02);
}

.navbar-default .navbar-toggle {
  border-color: $colorPrimary;
  background-color: $colorPrimary;
}

.navbar-default .navbar-toggle .icon-bar {
  background-color: #fff;
}

.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
  background-color: $colorPrimary;
}

.navbar-default .nav li a {
  text-transform: uppercase;
  font-family: $fontPrimary;
  font-weight: 400;
  letter-spacing: 1px;
  color: #fff;
  -webkit-transition: all ease .35s;
  -moz-transition: all ease .35s;
  transition: all ease .35s;
}

.navbar-default .nav li a:hover,
.navbar-default .nav li a:focus {
  outline: 0;
  color: $colorPrimary;
}

.navbar-default .navbar-nav>.active>a {
  border-radius: 0;
  color: $colorPrimary;
  background-color: transparent;
}

.navbar-default .navbar-nav>.active>a:hover,
.navbar-default .navbar-nav>.active>a:focus {
  color: $colorSecondary;
  background-color: transparent;
}

@media(min-width:768px) {
  .navbar-default {
    padding: 25px 0;
    border: 0;
    background-color: transparent;
    -webkit-transition: padding .3s;
    -moz-transition: padding .3s;
    transition: padding .3s;
  }

  .navbar-default .navbar-brand {
    font-size: 2em;
    -webkit-transition: all .3s;
    -moz-transition: all .3s;
    transition: all .3s;
  }

  .navbar-default .navbar-nav>.active>a {
    border-radius: 3px;
  }

  .navbar-default.navbar-shrink {
    padding: 10px 0;
    background-color: #222;
  }

  .navbar-default.navbar-shrink .navbar-brand {
    font-size: 1.5em;
  }
}

header {
  display: flex;
  align-items: center;
  min-height: 100vh;
  min-height: -webkit-fill-available;
  text-align: center;
  background-attachment: scroll;
  background-position: center center;
  background-repeat: none;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
}

@media(max-width:768px) {
  header {
    background-image: url("/images/header-bg-blurred-small.jpg");
  }
}

@media(min-width:768px) {
  header {
    background-image: url("/images/header-bg-blurred.jpg");
  }
}

header .hero {
  color: #fff;
  padding-top: 6vh;
}

header .hero .intro-img {
  display: inline-block;
  margin-bottom: 8vh;
  max-height: 26vh;
}

header .hero .intro-heading {
  // text-transform: uppercase;
  font-family: $fontPrimary;
  font-weight: 700;
  margin-bottom: 10vh;
  font-size: 6vh;
}

// For mobile
@media(max-width:768px) {
  header .hero .intro-img {
    max-width: 85vw;
    margin-bottom: 3vh;
  }
  
  header .hero .intro-heading {
    margin-bottom: 8vh;
  }
}

header .hero .intro-heading > div.countdown {
  display: inline-block;
}

section {
  padding: 50px 0;
}

section h2.section-heading {
  margin-bottom: 15px;
  font-size: 40px;
}

section h3.section-subheading {
  margin-bottom: 75px;
  text-transform: none;
  font-family: $fontSecondary;
  font-size: 16px;
  font-style: italic;
  font-weight: 400;
}

@media(min-width:768px) {
  section {
    padding: 75px 0;
  }
}

.service-heading {
  margin: 15px 0;
  text-transform: none;
}

#about .rectangle {
  height: 10px;
  width: 100px;
  background-color: $colorPrimary;
}

#theme .theme-img {
  float: left;
  max-width: calc(150px + 15vw);
  padding: 0.938vw 1.875vw 0.938vw 0;
}

@media(max-width:575px) {
  #theme .theme-img {
    float: none;
    max-width: 100%;
    margin-top: -20px;
    margin-bottom: 20px;
    padding: 0;
  }
}

.timeline {
  position: relative;
  padding: 0;
  list-style: none;
}

.timeline:before {
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  left: 40px;
  width: 2px;
  margin-left: -1.5px;
  background-color: #f1f1f1;
}

.timeline>li {
  position: relative;
  margin-bottom: 50px;
  min-height: 50px;
}

.timeline>li:before,
.timeline>li:after {
  content: " ";
  display: table;
}

.timeline>li:after {
  clear: both;
}

.timeline>li .timeline-panel {
  float: right;
  position: relative;
  width: 100%;
  padding: 0 20px 0 100px;
  text-align: left;
}

.timeline>li .timeline-panel:before {
  right: auto;
  left: -15px;
  border-right-width: 15px;
  border-left-width: 0;
}

.timeline>li .timeline-panel:after {
  right: auto;
  left: -14px;
  border-right-width: 14px;
  border-left-width: 0;
}

.timeline>li .timeline-image {
  z-index: 100;
  position: absolute;
  left: 0;
  width: 80px;
  height: 80px;
  margin-left: 0;
  border: 7px solid #f1f1f1;
  border-radius: 100%;
  text-align: center;
  color: #fff;
  background-color: $colorPrimary;
}

.timeline>li .timeline-image h4 {
  margin-top: 12px;
  font-size: 10px;
  line-height: 14px;
}

.timeline>li.timeline-inverted>.timeline-panel {
  float: right;
  padding: 0 20px 0 100px;
  text-align: left;
}

.timeline>li.timeline-inverted>.timeline-panel:before {
  right: auto;
  left: -15px;
  border-right-width: 15px;
  border-left-width: 0;
}

.timeline>li.timeline-inverted>.timeline-panel:after {
  right: auto;
  left: -14px;
  border-right-width: 14px;
  border-left-width: 0;
}

.timeline>li:last-child {
  margin-bottom: 0;
}

.timeline .timeline-heading h4 {
  margin-top: 0;
  color: inherit;
}

.timeline .timeline-heading h4.subheading {
  text-transform: none;
}

.timeline .timeline-body>p,
.timeline .timeline-body>ul {
  margin-bottom: 0;
}
/* ... */

